--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,13 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build/
 
 # Dependency directories
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
+# TypeScript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -57,3 +57,5 @@ typings/
 # dotenv environment variables file
 .env
 
+# next.js build output
+.next
